--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: linear-gradient(to bottom, #E5E1FC, #F4F2FB);
+  background: linear-gradient(to bottom, #e5e1fc, #f4f2fb);
   color: #363636;
   font-size: 18px;
   font-family: "Poppins", sans-serif;
@@ -31,26 +31,27 @@ h3 {
 }
 
 nav {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 /* PROFILE PAGE CSS */
 .profile-card {
   padding: 30px;
   border-radius: 15px;
-  background: #AD8DFA;
+  background: #ad8dfa;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .primary-btn {
-  border: 1.2px solid #9FDFE4;
+  border: 1.2px solid #9fdfe4;
   padding: 10px 30px;
   display: inline-flex;
   align-items: center;
   gap: 10.3px;
   font-size: 16px;
   text-align: center;
-  background: #9FDFE4 !important;
+  background: #9fdfe4 !important;
   color: #000;
   font-family: "Poppins", sans-serif;
   border-radius: 5px;
@@ -60,9 +61,9 @@ nav {
 }
 
 .primary-btn.red {
-  border: 1.2px solid #7A6FF1;
+  border: 1.2px solid #7a6ff1;
   color: #fff;
-  background: #7A6FF1 !important;
+  background: #7a6ff1 !important;
 }
 
 .primary-btn.red::before {
@@ -104,48 +105,45 @@ nav {
 }
 
 .md\:text-blue-700 {
-  color: #7A6FF1;
+  color: #7a6ff1;
 }
 
 .md\:hover\:text-blue-700:hover {
-  color: #7A6FF1;
+  color: #7a6ff1;
 }
 
 [multiple]:focus,
-[type=date]:focus,
-[type=datetime-local]:focus,
-[type=email]:focus,
-[type=month]:focus,
-[type=number]:focus,
-[type=password]:focus,
-[type=search]:focus,
-[type=tel]:focus,
-[type=text]:focus,
-[type=time]:focus,
-[type=url]:focus,
-[type=week]:focus,
+[type="date"]:focus,
+[type="datetime-local"]:focus,
+[type="email"]:focus,
+[type="month"]:focus,
+[type="number"]:focus,
+[type="password"]:focus,
+[type="search"]:focus,
+[type="tel"]:focus,
+[type="text"]:focus,
+[type="time"]:focus,
+[type="url"]:focus,
+[type="week"]:focus,
 select:focus,
 textarea:focus {
-
-  border-color: #7A6FF1;
-
+  border-color: #7a6ff1;
 }
 
 .focus\:ring-blue-500:focus {
-  --tw-ring-color: #7A6FF1;
+  --tw-ring-color: #7a6ff1;
 }
 
 .focus\:border-blue-500:focus {
-  border-color: #7A6FF1;
+  border-color: #7a6ff1;
 }
 
 .width-20 {
   width: 30%;
 }
 
-.space-y-2>:not([hidden])~:not([hidden]) {
-
-  margin-top: calc(2rem*(1 - var(--tw-space-y-reverse)));
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  margin-top: calc(2rem * (1 - var(--tw-space-y-reverse)));
 }
 
 .card-curve {
@@ -161,8 +159,7 @@ textarea:focus {
   border-radius: 15px;
   padding: 40px;
   padding-top: 55px;
-  background: #7A6FF1;
-
+  background: #7a6ff1;
 }
 
 .workout-grid {
@@ -252,11 +249,11 @@ textarea:focus {
   align-items: center;
   gap: 8px;
   font-size: 20px;
-  color: #7A6FF1;
+  color: #7a6ff1;
 }
 
 .back-wraps .back-to i {
-  color: #7A6FF1;
+  color: #7a6ff1;
   font-size: 20px;
 }
 
@@ -267,10 +264,10 @@ textarea:focus {
 }
 
 .work-btn-wrapper i {
-  background: #FFF;
+  background: #fff;
   padding: 12px 12px;
   border-radius: 5px;
-  color: #7A6FF1;
+  color: #7a6ff1;
   font-size: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
@@ -284,7 +281,7 @@ textarea:focus {
 }
 
 .bg-grad {
-  background: linear-gradient(to bottom, #E5E1FC, #F4F2FB);
+  background: linear-gradient(to bottom, #e5e1fc, #f4f2fb);
 }
 
 .icon-wraps {
@@ -310,7 +307,7 @@ textarea:focus {
 }
 
 .green-color {
-  color: #7A6FF1;
+  color: #7a6ff1;
 }
 
 .rotater {
@@ -322,12 +319,9 @@ textarea:focus {
   50% {
     transform: rotate(90deg);
   }
-
 }
 
-@media (max-width:1024px) {
-
-
+@media (max-width: 1024px) {
   .work-card {
     position: relative;
     padding-left: 15px;
@@ -337,7 +331,6 @@ textarea:focus {
   .work-card .grid {
     /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
     gap: 2px;
-
   }
 
   .h-screen {
@@ -348,7 +341,6 @@ textarea:focus {
     display: flex;
     flex-direction: column;
     gap: 8px;
-
   }
 
   .pb-120p {
@@ -394,7 +386,7 @@ textarea:focus {
 
   .mob-nav-list li a i {
     font-size: 30px;
-    color: #7A6FF1;
+    color: #7a6ff1;
   }
 
   .pd-0 {
@@ -432,10 +424,10 @@ textarea:focus {
     width: 100%;
   }
 
-  .space-y-8>:not([hidden])~:not([hidden]) {
+  .space-y-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
-    margin-bottom: calc(2rem* var(--tw-space-y-reverse));
-    margin-top: calc(1rem*(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+    margin-top: calc(1rem * (1 - var(--tw-space-y-reverse)));
   }
 
   .workout-detail {
@@ -496,7 +488,7 @@ textarea:focus {
   }
 }
 
-@media (max-width:640px) {
+@media (max-width: 640px) {
   .rotater {
     width: 80%;
     margin: auto;
@@ -542,7 +534,7 @@ textarea:focus {
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 35px;
-    background: #7A6FF1;
+    background: #7a6ff1;
   }
 
   .work-card .grid {
@@ -559,7 +551,6 @@ textarea:focus {
   }
 
   .mob-nav-list li a {
-
     gap: 7px;
     font-size: 16px;
   }
@@ -575,4 +566,10 @@ textarea:focus {
   .ml-100 {
     margin-left: 0;
   }
+}
+
+input::disabled {
+  background: #ccc;
+  color: #000;
+  cursor: not-allowed;
 }
