--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -1,155 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="../static/assets/css/style.css" />
+    <link href="../static/css/main.css" rel="stylesheet" />
+    <link href="../static/css/tailwind.css" rel="stylesheet" />
+    <script src="../static/js/lib.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Логин | Фитнес-трекер</title>
-  <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
-  <!-- <link href="../static/css/tailwind.css" rel="stylesheet" /> -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css">
-  <link href="../static/css/main.css" rel="stylesheet" />
-  <script src="../static/js/lib.js"></script>
-</head>
+  <body>
+    <script>
+      (async () => {
+        let accessToken = localStorage.getItem("access_token");
+        let refreshToken = localStorage.getItem("refresh_token");
+        if (accessToken && refreshToken) {
+          let isValid = await verifyJwtToken(accessToken);
 
-<body>
-  <script>
-    (async () => {
-      let accessToken = localStorage.getItem("access_token");
-      let refreshToken = localStorage.getItem("refresh_token");
-      if (accessToken && refreshToken) {
-        let isValid = await verifyJwtToken(accessToken);
-
-        if (isValid) {
-          window.location.href = "/dashboard";
-        } else {
-          let { access_token, refresh_token } = await refreshJwtToken(
-            refreshToken
-          );
-
-          if (access_token && refresh_token) {
-            localStorage.setItem("access_token", access_token);
-            localStorage.setItem("refresh_token", refresh_token);
+          if (isValid) {
             window.location.href = "/dashboard";
           } else {
-            console.log("Недопустимый токен обновления. Оставайтесь на странице.");
+            let { access_token, refresh_token } = await refreshJwtToken(
+              refreshToken
+            );
+
+            if (access_token && refresh_token) {
+              localStorage.setItem("access_token", access_token);
+              localStorage.setItem("refresh_token", refresh_token);
+              window.location.href = "/dashboard";
+            } else {
+              console.log(
+                "Недопустимый токен обновления. Оставайтесь на странице."
+              );
+            }
           }
         }
-      }
-    })();
-  </script>
-
-  <section class="bg-gray-50 dark:bg-gray-900 flex h-100vh">
-    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0 w-40p">
-      <div
-        class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-          <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-            Войдите в свою учетную запись
-          </h1>
-          <div class="space-y-4 md:space-y-6">
-            <div>
-              <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ваш адрес
-                электронной почты</label>
-              <input type="email" name="email" id="email"
-                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                placeholder="name@mail.ru" required />
-            </div>
-            <div>
-              <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Пароль</label>
-              <input type="password" name="password" id="password" placeholder="••••••••"
-                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                required />
-            </div>
-            <div class="flex items-center justify-between">
-              <div class="flex items-start">
-                <div class="flex items-center h-5">
-                  <input id="remember" aria-describedby="remember" type="checkbox"
-                    class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                    required checked />
-                </div>
-                <div class="ml-3 text-sm">
-                  <label for="remember" class="text-gray-500 dark:text-gray-300"> Запомнить меня</label>
-                </div>
-              </div>
-              <!-- Forget password. Not Implemented -->
-              <!-- <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a> -->
-            </div>
-            <button type="button" id="submit" class="primary-btn">
-              Войти
-            </button>
-            <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-              У вас еще нет учетной записи?
-              <a href="/register"
-                class="font-medium text-primary-600 hover:underline dark:text-primary-500">Зарегистрируйтесь сейчас</a>
-            </p>
+      })();
+    </script>
+    <!-- LOGIN PAGE START HERE -->
+    <section class="login-page">
+      <div class="top-logo-part">
+        <div class="container">
+          <div class="main-logo">
+            <img
+              src="../static/assets/images/white-logo.svg"
+              alt="white-logo"
+            />
           </div>
         </div>
       </div>
-    </div>
-  </section>
+      <div class="main-login-section">
+        <div class="container">
+          <div class="company-name text-center">
+            <h1>Form Factory</h1>
+          </div>
+          <div class="login-image">
+            <img
+              src="../static/assets/images/login-image.png"
+              alt=""
+              class="img-responsive"
+            />
+          </div>
+          <div class="topic text-center">
+            <h6>НИКАКИХ ОГРАНИЧЕНИЙ, ТОЛЬКО ВОЗМОЖНОСТИ</h6>
+          </div>
+          <div class="form-part mt-45">
+            <div class="white-form">
+              <div class="flex-column gap-20">
+                <div class="input-wraps">
+                  <label for="">Email или телефон</label>
+                  <input
+                    type="text"
+                    placeholder="example@gmail.com"
+                    id="email"
+                  />
+                </div>
+                <div class="input-wraps">
+                  <label for="">Пароль</label>
+                  <input type="text" placeholder="......." id="password" />
+                  <div class="pw-shown" id="eye">
+                    <img src="../static/assets/images/eye.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+              <div class="check-wrap">
+                <input type="checkbox" id="check" checked />
+                <span>Согласие на обработку персональных данных</span>
+              </div>
+            </div>
+            <div class="btn-wrap">
+              <button class="btn" id="submit" disabled>Войти</button>
+            </div>
+            <div class="account-check-wrap">
+              <a href="">Забыл пароль?</a>
+              <a href="/register">Зарегистрироваться</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- LOGIN PAGE START HERE -->
 
-  <!-- A very basic method toast. Libraries are not used to keep everything minimal -->
-  <section id="toasts">
-    <div id="toast-success"
-      class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
-      role="alert" style="display: none">
+    <section id="toasts">
       <div
-        class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-          viewBox="0 0 20 20">
-          <path
-            d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
-        </svg>
-        <span class="sr-only">Значок проверки</span>
+        id="toast-success"
+        class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-20"
+        role="alert"
+        style="display: none"
+      >
+        <div
+          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200"
+        >
+          <svg
+            class="w-5 h-5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
+            />
+          </svg>
+          <span class="sr-only">Значок проверки</span>
+        </div>
+        <div class="ms-3 text-sm font-normal" id="toast-success-text">
+          Вход в систему выполнен успешно.
+        </div>
+        <button
+          type="button"
+          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+          data-dismiss-target="#toast-success"
+          aria-label="Close"
+          onclick="closeToast('toast-success')"
+        >
+          <span class="sr-only">Закрывать</span>
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+        </button>
       </div>
-      <div class="ms-3 text-sm font-normal" id="toast-success-text">
-        Вход в систему выполнен успешно.
-      </div>
-      <button type="button"
-        class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-        data-dismiss-target="#toast-success" aria-label="Close" onclick="closeToast('toast-success')">
-        <span class="sr-only">Закрывать</span>
-        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-        </svg>
-      </button>
-    </div>
-    <div id="toast-danger"
-      class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
-      role="alert" style="display: none">
       <div
-        class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-          viewBox="0 0 20 20">
-          <path
-            d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z" />
-        </svg>
-        <span class="sr-only">Значок ошибки</span>
+        id="toast-danger"
+        class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-20"
+        role="alert"
+        style="display: none"
+      >
+        <div
+          class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200"
+        >
+          <svg
+            class="w-5 h-5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
+            />
+          </svg>
+          <span class="sr-only">Значок ошибки</span>
+        </div>
+        <div class="ms-3 text-sm font-normal" id="toast-danger-text">
+          Неверное имя пользователя и пароль
+        </div>
+        <button
+          type="button"
+          class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+          data-dismiss-target="#toast-danger"
+          aria-label="Close"
+          onclick="closeToast('toast-danger')"
+        >
+          <span class="sr-only">Закрывать</span>
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+        </button>
       </div>
-      <div class="ms-3 text-sm font-normal" id="toast-danger-text">
-        Неверное имя пользователя и пароль
-      </div>
-      <button type="button"
-        class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
-        data-dismiss-target="#toast-danger" aria-label="Close" onclick="closeToast('toast-danger')">
-        <span class="sr-only">Закрывать</span>
-        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-        </svg>
-      </button>
-    </div>
-  </section>
+    </section>
 
-  <script>
-    function closeToast(id) {
-      document.getElementById(id).style.display = "none";
-    }
-  </script>
-  <script src="../static/js/login.js"></script>
+    <script>
+      function closeToast(id) {
+        document.getElementById(id).style.display = "none";
+      }
 
-</body>
+      document.getElementById("check").addEventListener("click", () => {
+        if (document.getElementById("check").checked) {
+          document.getElementById("submit").disabled = false;
+        } else {
+          document.getElementById("submit").disabled = true;
+        }
+      });
 
+      document.getElementById("eye").addEventListener("click", () => {
+        let password = document.getElementById("password");
+        let eye = document.getElementById("eye");
+
+        if (password.type === "password") {
+          password.type = "text";
+        } else {
+          password.type = "password";
+        }
+      });
+    </script>
+    <script src="../static/js/login.js"></script>
+  </body>
 </html>
