--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -90,7 +90,7 @@
               </div>
             </div>
             <div class="btn-wrap">
-              <button class="btn" id="submit" disabled>Войти</button>
+              <button class="btn" id="submit">Войти</button>
             </div>
             <div class="account-check-wrap">
               <a href="">Забыл пароль?</a>
